--- a/style.css
+++ b/style.css
@@ -41,17 +41,13 @@ nav button{
     margin-left: 10px;
     cursor: pointer;
 }
-.lang{
-    background: transparent;
-    border: 1px solid #fff;
-}
 .header-content{
     display: flex;
     flex-direction: column;
     height: 100%;
     align-items: center;
     justify-content: center;
-    gap: 3px;
+    gap: 15px;
 }
 .header-content h1{
     font-size: 48px;
@@ -205,4 +201,116 @@ small{
     font-size: 20px;
     margin: 0;
     font-weight: 300;
+}
+/* --------------mobile--------------------- */
+@media only screen and (max-width:455px){
+    .logo{
+        width: 100px;
+        margin-top: 8px;
+        margin-left: -3px;
+    }
+    .header{
+        width: 100%;
+        height: 70vh;
+
+    }
+    nav{
+    margin-bottom: 0px;
+    }
+    nav button{
+        display: flex;
+        font-size: 14px;
+    }
+    .header-content{
+        justify-content:flex-start;
+        margin-top: 50px;
+    }
+    .header-content h1{
+        font-size: 29px;
+        text-align: center;
+    }
+    .header-content h3{
+        font-size: 16px;
+        font-weight: 400;
+    }
+    .header-content p{
+        font-size: 16px;
+        text-align: center;
+        font-weight: 400;
+        width: 80%;
+    }
+    .email input{
+        font-size: small;
+        width: 70vw;
+        padding: 6px 22px;
+        background-color: rgb(23, 23, 23,0.7);
+        border: 1px solid rgb(95, 95, 95);
+        border-radius: 4px;
+        height: 3rem;
+        color: #fff;
+        display: block;
+        margin-top: -9px;
+        margin-bottom: 12px;
+    }
+    .email button{
+        font-size: 18px;
+        font-weight: 500;
+        margin: auto;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        
+    }
+    .features{
+        padding: 0px 12%;
+        font-size: 22px;
+    }
+    .text-col{
+        width: 100%;
+    }
+    .text-col h2{
+        font-size: 32px;
+        font-weight: 800;
+        text-align: center;
+    }
+    .text-col p{
+        font-size: 16px;
+        margin-top: 7px;
+        font-weight: 400;
+        text-align: center;
+    }
+
+    .img-col img{
+        width: 100%;
+        
+    }
+    #one,#two{
+        flex-direction: column-reverse;
+    }
+    .faq h2{
+        font-size: 30px;
+    }
+    .accordion li label{
+        font-size: 16px;
+        text-align: left;
+    }
+    label::after{
+        font-size: 32px;
+        
+    }
+    .accordion{
+        margin: 60px auto;
+        width: 100%;
+        max-width: 950px;
+    }
+    .accordion .content{ 
+        font-size: 16px;
+    }
+    small{
+        font-size: 18px;
+        font-weight: 600;
+        text-align: center;
+        position: relative;
+        top: -29px;
+    }
 }
